force-app/main/default/objects/AS_US_Terr_Plan_History__c/AS_US_Terr_Plan_History__c.object-meta.xml
<CustomObject>
    <description>Analytic snapshot of territory plan data.</description>
    <label>AS US Terr Plan History</label>
    <nameField>
        <displayFormat>TPH-{YYYY}-{00}</displayFormat>
        <label>AS US Terr Plan History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AS US Terr Plan Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>