force-app/main/default/objects/AS_US_Terr_Plan_History__c/fields/AVP_Name__c.field-meta.xml
<CustomField>
    <fullName>AVP_Name__c</fullName>
    <label>AVP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>