force-app/main/default/objects/AS_US_Terr_Plan_History__c/fields/BM_Name__c.field-meta.xml
<CustomField>
    <fullName>BM_Name__c</fullName>
    <label>BM Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>