force-app/main/default/objects/AS_US_Terr_Plan_History__c/fields/Number_of_Direct_Reports__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Direct_Reports__c</fullName>
    <label># of Direct Reports</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>