force-app/main/default/objects/AS_US_Terr_Plan_History__c/fields/Number_of_Territory_Plans_Created__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Territory_Plans_Created__c</fullName>
    <label># of Territory Plans Created</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>