force-app/main/default/objects/AS_US_Terr_Plan_History__c/fields/Percent_Completed__c.field-meta.xml
<CustomField>
    <fullName>Percent_Completed__c</fullName>
    <label>% Completed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>