force-app/main/default/objects/AS_US_Terr_Plan_History__c/fields/Quarter_Number__c.field-meta.xml
<CustomField>
    <fullName>Quarter_Number__c</fullName>
    <label>Quarter Number</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>