force-app/main/default/objects/AS_US_Terr_Plan_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BM_Name__c</columns>
    <columns>AVP_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Quarter_Number__c</columns>
    <columns>Number_of_Direct_Reports__c</columns>
    <columns>Number_of_Territory_Plans_Created__c</columns>
    <columns>Percent_Completed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>