force-app/main/default/objects/AS_US_Terr_Plan_History__c/listViews/All_Q2.listView-meta.xml
<ListView>
    <fullName>All_Q2</fullName>
    <columns>NAME</columns>
    <columns>BM_Name__c</columns>
    <columns>AVP_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Number_of_Direct_Reports__c</columns>
    <columns>Number_of_Territory_Plans_Created__c</columns>
    <columns>Percent_Completed__c</columns>
    <columns>Quarter_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Quarter_Number__c</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>BM_Name__c</field>
        <operation>greaterThan</operation>
        <value>k</value>
    </filters>
    <label>All Q2</label>
    <language>en_US</language>
</ListView>